--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,6 @@ plugins {
 android {
     compileSdk 32
 
-
-
     defaultConfig {
         applicationId "com.avssolutionnnnnnn.avs.randomvideocalling"
         minSdk 21
@@ -56,9 +54,14 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:4.3.0'
     implementation 'com.kaopiz:kprogresshud:1.2.0'
     implementation 'com.google.android.gms:play-services-ads:21.2.0'
-
+    implementation project(':nativetemplates')
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
-    implementation project(':nativetemplates')
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
+
+    implementation 'com.applovin:applovin-sdk:11.3.3'
+
+
+
 }
