--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation project(':nativetemplates')
+
+
+    implementation 'com.applovin:applovin-sdk:11.3.3'
+
 }
