--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ android {
 
 
     defaultConfig {
-        applicationId "com.avssolutionnnnnnn.avs.randomvideocalling"
+        applicationId "com.akashsingh.avs.randomvideocalling"
         minSdk 21
         targetSdk 32
-        versionCode 1
+        versionCode 5
         multiDexEnabled true
-        versionName "1.0"
+        versionName "5.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
