--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.avssolutionnnnnnn.avs.randomvideocalling">
+    package="com.akashsingh.avs.randomvideocalling">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
@@ -15,19 +15,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RandomVideoCalling">
         <activity
-            android:name="com.avssolutionnnnnnn.avs.randomvideocalling.Activity.PrivicyPolicyActivity"
+            android:name="com.akashsingh.avs.randomvideocalling.Activity.PrivicyPolicyActivity"
             android:exported="false" />
         <activity
-            android:name="com.avssolutionnnnnnn.avs.randomvideocalling.Activity.ChatLishActivity"
+            android:name="com.akashsingh.avs.randomvideocalling.Activity.ChatLishActivity"
             android:exported="false" />
         <activity
-            android:name="com.avssolutionnnnnnn.avs.randomvideocalling.Activity.GroupActivity"
+            android:name="com.akashsingh.avs.randomvideocalling.Activity.GroupActivity"
             android:exported="false" />
         <activity
-            android:name=".SelectedActivity"
+            android:name="com.akashsingh.avs.randomvideocalling.SelectedActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity.SplashActivity"
+            android:name="com.akashsingh.avs.randomvideocalling.Activity.SplashActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -37,27 +37,27 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity.WelcomeActivity"
+            android:name="com.akashsingh.avs.randomvideocalling.Activity.WelcomeActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Activity.GenderActivity"
+            android:name="com.akashsingh.avs.randomvideocalling.Activity.GenderActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Activity.CallActivity"
+            android:name="com.akashsingh.avs.randomvideocalling.Activity.CallActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Activity.ConnectingActivity"
+            android:name="com.akashsingh.avs.randomvideocalling.Activity.ConnectingActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Activity.LogInActivity"
+            android:name="com.akashsingh.avs.randomvideocalling.Activity.LogInActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.akashsingh.avs.randomvideocalling.MainActivity"
             android:exported="true" />
 
         <meta-data
@@ -69,7 +69,7 @@
             android:value="K3Nf_7D5htbmWpmEzPHqiT5EtCI48VK61LI8bkxlt4agGdT078eyKxEewuh8sPw6S2-q9VbgmiMtNPck8ctAnQ" />
 
         <service
-            android:name=".Models.MyFirebaseMessagingService"
+            android:name="com.akashsingh.avs.randomvideocalling.Models.MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
