--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ android {
 
 
     defaultConfig {
-        applicationId "com.akashsingh.avs.randomvideocalling"
+        applicationId "com.avssolution.videocalling_app"
         minSdk 21
         targetSdk 32
-        versionCode 5
+        versionCode 8
         multiDexEnabled true
-        versionName "5.0"
+        versionName "8.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -45,6 +45,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.8'
     implementation 'com.google.firebase:firebase-database:20.0.6'
     implementation 'com.google.firebase:firebase-messaging:23.0.8'
+    implementation 'com.google.firebase:firebase-firestore:24.4.4'
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.2.1'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
