--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,10 +82,6 @@
             android:name="com.avssolution.videocalling_app.MainActivity"
             android:exported="true" />
 
-        <meta-data
-            android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="@string/admob_app_id" />
-
         <service
             android:name="com.avssolution.videocalling_app.Models.MyFirebaseMessagingService"
             android:exported="false">
@@ -93,6 +89,14 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/admob_app_id" />
+
+        <meta-data android:name="applovin.sdk.key"
+            android:value="@string/applovin_sdk"/>
+
     </application>
 
 </manifest>
